<resources>
    <string name="app_name">mCP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="folder_provider">mcp-files</string>
    <string name="keyMap_Dev">AIzaSyCO77nVxrBDTUPmjzPV9Zw1mUdMB9y3fkU</string>
    <string name="keyFCM_Dev">AIzaSyB-yGcYFaAwYEqwyzHtO4Tmh1bb1yxi3g4</string>
    <string name="senderID_Dev">998850959193</string>
    <string name="facebook_app_id">553810151685547</string>
    <string name="fb_login_protocol_scheme">fb553810151685547</string>
    <string name="recapchar_sitekey">6Ld8ymQUAAAAAOcpcFbgRhl-YW9dVPvMPuqVspsB</string>
    <string name="api_sitekey_recaptcha">6LcAf1AUAAAAADUQAlyndZoRaZvoOpcJ-XuO_wJ7</string>
    <string name="api_secrectkey_recaptcha">6LcAf1AUAAAAABcsTpece5KIBXUkSi7AqXumbkPj</string>
    <string name="key_map_debug">AIzaSyBBbZJhHdOGCVt4RKAFENsb_GkToTeJmMA</string>
    <string name="key_map_production">AIzaSyDgyss3J5QgT0ScAPpjI7CzsT23dA_f9dU</string>
    <string name="nav_home">Trang chủ</string>
    <string name="nav_infoGeneral">Thông tin chung</string>
    <string name="nav_infoProduct">Thông tin sản phẩm</string>
    <string name="nav_infoContract">Thông tin hợp đồng</string>
    <string name="nav_bonusProgram">Chương trình điểm thưởng</string>
    <string name="nav_fundPrice">Giá đơn vị quỹ</string>
    <string name="nav_paymentOnline">Thanh toán trực tuyến</string>
    <string name="nav_electricBill">Hóa đơn điện tử</string>
    <string name="nav_listOffice">Mạng lưới văn phòng</string>
    <string name="nav_notifications">Thông báo</string>
    <string name="nav_settings">Cài đặt</string>
    <string name="nav_logout">Đăng xuất</string>
    <string name="nav_about_us">Hướng dẫn sử dụng</string>
    <string-array name="nav_item_activity_titles">
        <item>Trang chủ</item>
        <item>Thông tin chung</item>
        <item>Thông tin sản phẩm</item>
        <item>Thông tin hợp đồng</item>
        <item>Chương trình điểm thưởng</item>
        <item>Giá đơn vị quỹ</item>
        <item>Thanh toán trực tuyến</item>
        <item>Hóa đơn điện tử</item>
        <item>Mạng lưới văn phòng</item>
        <item>Thông báo</item>
        <item>Cài đặt</item>
        <item>Đăng xuất</item>
    </string-array>
    <string name="action_clear_all">Xóa hết</string>
    <string name="action_logout">Đăng xuất</string>
    <string name="action_call">Liên hệ</string>
    <string name="action_mark_all_read">Đánh dấu đã đọc</string>
    <string name="privacy_policy">Chính sách bảo mật</string>
    <string name="permission_info">Ứng dụng cần cấp quyền truy cập bộ nhớ máy.</string>
    <string name="permission_force">Ứng dụng cần cấp quyền xem hình ảnh của bạn. Chọn Settings và đi đến mục Permissions để cấp quyền.</string>
    <string name="permission_ok">Đồng ý</string>
    <string name="permission_settings">Hệ thống</string>
    <string name="permission_package">package</string>
    <string name="confirm_yes">Đồng ý</string>
    <string name="confirm_no">Không</string>
    <string name="confirm_ok">Đồng ý</string>
    <string name="low_memory_message">Ứng dụng đang thiếu bộ nhớ, việc tải hình ảnh có thể bị chậm.</string>
    <string name="low_memory">Thiếu bộ nhớ.</string>
    <string name="home_welcome_user">Anh/chị có thể dễ dàng tra cứu thông tin hợp đồng bảo hiểm nhân thọ, thông tin điểm thưởng tích lũy của mình.</string>
    <string name="home_welcome_guest">Đến với cổng thông tin khách hàng của Dai-Ichi-Life Việt Nam, vui lòng đăng nhập để sử dụng đầy đủ chức năng.</string>
    <string name="home_welcom_article">
<![CDATA[<strong><b>CHÀO MỪNG QUÝ KHÁCH ĐẾN VỚI "CỔNG THÔNG TIN KHÁCH HÀNG" !</b></strong> <br>

Với mục tiêu phát triển mối quan hệ gắn kết với Khách hàng tham gia bảo hiểm thông qua việc cập nhật thường xuyên cho Khách hàng tất cả những thông tin về hợp đồng bảo hiểm của mình, Dai-ichi Life Việt Nam trân trọng giới thiệu đến toàn thể Quý Khách hàng trang thông tin trực tuyến dành cho Khách hàng <strong><b>"Cổng thông tin Khách hàng"</b></strong><br>

Thông qua <strong><b>"Cổng thông tin Khách hàng"</b></strong>, dù đang ở bất kỳ nơi đâu, Quý khách đều có thể nhanh chóng và dễ dàng tra cứu những thông tin về hợp đồng bảo hiểm nhân thọ của mình: các sản phẩm bảo hiểm, ngày đáo hạn hợp đồng, ngày đến hạn nộp phí, phí bảo hiểm định kỳ phải nộp, phí bảo hiểm đã nộp, các giá trị của hợp đồng như lãi tích lũy, tiền mặt định kỳ, giá trị hoàn lại … Bên cạnh đó, Quý khách còn có thể tra cứu và sử dụng điểm thưởng tích lũy của chương trình tích lũy điểm thưởng "Gắn bó dài lâu".<br>

Chúng tôi tin rằng <strong><b>"Cổng thông tin Khách hàng"</b></strong> này không chỉ mang lại nhiều tiện ích cho Quý khách hàng trong suốt thời gian tham gia bảo hiểm mà còn là cầu nối mang Dai-ichi Life Việt Nam đến gần Quý Khách hàng hơn.<br>

Quý khách cần trao đổi thêm thông tin, xin vui lòng liên hệ với bất kỳ Văn phòng và Trung tâm Dịch vụ khách hàng, hoặc Tổng đài Dịch vụ khách hàng Dai-ichi Life Việt Nam, điện thoại: (028) 3810 0888, bấm phím số 1. Chúng tôi luôn sẵn sàng phục vụ Quý khách.<br>

Kính chúc Quý khách cùng gia đình thật nhiều sức khỏe, hạnh phúc và thành công.<br>

Trân trọng kính chào,<br>

<strong><b>Dai-ichi Life Việt Nam</b></strong>]]>
    </string>
    <string name="title_activity_notification">Thông báo</string>
    <string name="title_activity_web_napas">Thanh toán trực tuyến</string>
    <string name="title_activity_profile">Thông tin cá nhân</string>
    <string name="title_activity_contract_detail">Hợp đồng chi tiết</string>
    <string name="title_activity_contact">Liên hệ</string>
    <string name="title_activity_bonus__nop_phi_bh">Nộp phí/ Hoàn trả</string>
    <string name="non_spinner">Chọn</string>
    <string name="title_activity_web_tutorial">Hướng dẫn</string>
    <string name="title_activity_bonus__nop_phi_bh__step02_">Nộp phí/ Hoàn trả</string>
    <string name="title_activity_bonus__nop_phi_bh__step03_">Nộp phí/ Hoàn trả</string>
    <string name="title_activity_product_detail">Chi tiết sản phẩm</string>
    <string name="title_activity_change_profile">Thay đổi thông tin</string>
    <string name="title_activity_change_password">Thay đổi mật khẩu</string>
    <string name="title_activity_transaction_history">Lịch sử giao dịch</string>
    <string name="title_activity_transaction_detail">Chi tiết giao dịch</string>
    <string name="title_activity_news">Bản tin Dai-Ichi-Life</string>
    <string name="title_activity_login_main">Đăng nhập</string>
    <string name="activity_title_about_us">Hướng dẫn sử dụng</string>
    <string name="activity_title_list_office">Mạng lưới văn phòng</string>
    <string name="activity_title_contract_detail">Chi tiết hợp đồng</string>
    <string name="activity_title_privacy_policy">Chính sách bảo mật</string>
    <string name="title_activity_cartmanager">Thanh toán</string>
    <string name="title_activity_deliveryInput">Thông tin giao hàng</string>
    <string name="title_activity_point_list">Quá trình tích lũy và sử dụng điểm thưởng</string>
    <string name="title_activity_lien_ket_tai_khoan">Liên kết tài khoản</string>
    <string name="title_activity_dashboard">Trang chủ</string>
    <string name="setting_txt_taikhoan">Tài khoản</string>
    <string name="setting_txt_baomat">Bảo mật</string>
    <string name="setting_txt_lktaikhoan">Liên kết tài khoản</string>
    <string name="setting_txt_thongbao">Thông báo</string>
    <string name="setting_txt_hdsd">Hướng dẫn sử dụng</string>
    <string name="setting_txt_lichsu_thanhtoan">Lịch sử thanh toán online</string>
    <string name="setting_txt_map">Mạng lưới văn phòng và phòng khám</string>
    <string name="setting_txt_priceilp">Giá đơn vị quỹ</string>
    <string name="setting_txt_lienhe">Liên hệ</string>
    <string name="setting_txt_thongtin">Thông tin mCP</string>
    <string name="setting_txt_claims">Yêu cầu quyền lợi bảo hiểm</string>
    <string name="setting_txt_dangxuat">Đăng xuất</string>
    <string name="prompt_email">Tên đăng nhập/Email</string>
    <string name="prompt_password">Mật khẩu</string>
    <string name="action_sign_in">Tiếp tục</string>
    <string name="action_sign_in_short">Đăng nhập</string>
    <string name="action_changepassword_short">Đổi Mật Khẩu</string>
    <string name="action_payment">Đóng phí bảo hiểm</string>
    <string name="forgotpassword_title">Vui lòng kiểm tra email</string>
    <string name="forgotpassword_message">Chúng tôi đã gửi cách thức thực hiện khôi phục mật khẩu vào địa chỉ email</string>
    <string name="forgotpassword_button">MỞ HỘP MAIL</string>
    <string name="error_changepass_fail">Cập nhật mật khẩu thất bại, vui lòng thực hiện lại.</string>
    <string name="error_invalid_email">Địa chỉ Email không hợp lệ, vui lòng kiểm tra lại.</string>
    <string name="error_invalid_character">Tên đăng nhập/ email không được chứa kí tự đặc biệt.</string>
    <string name="error_invalid_password">Mật khẩu chưa hợp lệ, vui lòng nhập lại.</string>
    <string name="error_invalid_password_change">Mật khẩu chưa chính xác, vui lòng nhập lại.</string>
    <string name="error_incorrect_password">Sai mật khẩu</string>
    <string name="error_field_required">Không được để trống</string>
    <string name="error_incorrect_fullname">Họ tên không hợp lệ vui lòng kiểm tra lại.</string>
    <string name="error_incorrect_phone">Số điện thoại không hợp lệ vui lòng kiểm tra lại.</string>
    <string name="error_incorrect_verifycode">Mã xác nhận không chính xác.</string>
    <string name="error_incorrect_newpassword">Vui lòng nhập lại mật khẩu hợp lệ.</string>
    <string name="error_incorrect_inputcode">Mã không chính xác hoặc đã hết hạn.</string>
    <string name="error_no_internet">Không có kết nối mạng. Xin vui lòng kiểm tra lại.</string>
    <string name="message_error_username_login">Tên đăng nhập không đúng hoặc không tồn tại.</string>
    <string name="message_error_date">Ngày sai định dạng.</string>
    <string name="message_alert_login_to_using_function">Anh/chị cần phải đăng nhập để sử dụng chức năng này.</string>
    <string name="message_alert_login_have_policy">Chức năng chỉ dành cho khách hàng đã có hợp đồng.</string>
    <string name="message_alert_logout">Anh/chị có thật sự muốn thoát khỏi chương trình này không ?.</string>
    <string name="message_alert_download_file">Anh/chị có muốn download tập tin này không ?</string>
    <string name="alert_input_payment">Anh/chị cần phải nhập số tiền và chọn phương thức thanh toán.</string>
    <string name="message_alert_input_password">Vui lòng nhập lại mật khẩu hợp lệ.</string>
    <string name="message_alert_correct_password">Mật khẩu không hợp lệ vui lòng thử lại. Mật khẩu hợp lệ là một dãy ít nhất 4 kí tự bao gồm chữ và số.</string>
    <string name="message_alert_relogin">Phiên làm việc của Anh/chị đã hết, xin vui lòng đăng nhập lại.</string>
    <string name="permission_rationale">"Cần cung cấp quyền truy cập Thông tin liên hệ để có thể đăng nhập bằng email."</string>
    <string name="message_alert_permission_contact">Anh/chị cần cho phép ứng dụng truy cập thông tin tài khoản gmail, facebook để có thể sử dụng chức năng đăng nhập qua mạng xã hội.</string>
    <string name="txt_quay_lai">Quay lại</string>
    <string name="txt_nhap_matkhau">Vui lòng nhập mật khẩu để đăng nhập.</string>
    <string name="txt_taomoi_matkhau">Vui lòng nhập mật khẩu mới để đăng nhập.</string>
    <string name="hint_taomoi_matkhau">Nhập lại mật khẩu.</string>
    <string name="txt_show_pasword">Hiện mật khẩu</string>
    <string name="title_home">Trang chủ</string>
    <string name="title_contract">Hợp đồng</string>
    <string name="title_fundbonus">Điểm thưởng</string>
    <string name="title_notifications">Thông báo</string>
    <string name="title_other">Khác</string>
</resources>