<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    tools:context="com.dlvn.mcustomerportal.afragment.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:background="@drawable/st_bg_white_noborder_noradius"
            android:drawableLeft="@drawable/icon_use"
            android:drawableRight="@drawable/ico_arrow_right"
            android:text="@string/setting_txt_taikhoan"
            android:textAllCaps="false" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/icon_use"
            android:background="@drawable/st_bg_white_noborder_noradius"
            android:drawableRight="@drawable/ico_arrow_right"
            android:text="@string/setting_txt_baomat"
            android:textAllCaps="false" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/icon_use"
            android:background="@drawable/st_bg_white_noborder_noradius"
            android:drawableRight="@drawable/ico_arrow_right"
            android:text="@string/setting_txt_lktaikhoan"
            android:textAllCaps="false" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/icon_use"
            android:background="@drawable/st_bg_white_noborder_noradius"
            android:drawableRight="@drawable/ico_arrow_right"
            android:text="@string/setting_txt_thongbao"
            android:textAllCaps="false" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/icon_use"
            android:background="@drawable/st_bg_white_noborder_noradius"
            android:drawableRight="@drawable/ico_arrow_right"
            android:text="@string/setting_txt_hdsd"
            android:textAllCaps="false" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/icon_use"
            android:background="@drawable/st_bg_white_noborder_noradius"
            android:drawableRight="@drawable/ico_arrow_right"
            android:text="@string/setting_txt_lichsu_thanhtoan"
            android:textAllCaps="false" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/icon_use"
            android:background="@drawable/st_bg_white_noborder_noradius"
            android:drawableRight="@drawable/ico_arrow_right"
            android:text="@string/setting_txt_lienhe"
            android:textAllCaps="false" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/icon_use"
            android:background="@drawable/st_bg_white_noborder_noradius"
            android:drawableRight="@drawable/ico_arrow_right"
            android:text="@string/setting_txt_thongtin"
            android:textAllCaps="false" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/icon_use"
            android:background="@drawable/st_bg_white_noborder_noradius"
            android:drawableRight="@drawable/ico_arrow_right"
            android:text="@string/setting_txt_dangxuat"
            android:textAllCaps="false" />

    </LinearLayout>

</LinearLayout>
